[package]
name = "env-secrets"
version = "0.0.6"
edition = "2021"

authors = ["Nikolay Arhipov <n@arhipov.net>"]
keywords = ["environment", "secrets", "secret-service", "password", "keychain"]
description = "A CLI tool to set env variables from a keyring"
homepage = "https://github.com/nikarh/env-secrets.git"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nikarh/env-secrets.git"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
rpassword = "7"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3" }
serde = "1"
serde_json = "1"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
similar_names = "allow"

[profile.release]
opt-level = 3
lto = "fat"
strip = "symbols"
panic = "abort"
